[gd_scene load_steps=4 format=3 uid="uid://vj5feyq5sl6r"]

[ext_resource type="Script" uid="uid://bopt66vu8q8qa" path="res://src/main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dkfqww1gfq0k" path="res://src/middle_area.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://bov0ixvuurdny" path="res://src/player_area.tscn" id="3_1bvp3"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="MiddleArea" parent="." instance=ExtResource("2_h2yge")]

[node name="PlayerArea" parent="." instance=ExtResource("3_1bvp3")]

[node name="PlayerArea2" parent="." instance=ExtResource("3_1bvp3")]

[node name="PlayerArea3" parent="." instance=ExtResource("3_1bvp3")]

[node name="PlayerArea4" parent="." instance=ExtResource("3_1bvp3")]

[node name="PlayerArea5" parent="." instance=ExtResource("3_1bvp3")]

[node name="PlayerArea6" parent="." instance=ExtResource("3_1bvp3")]

[node name="ActionsLeftLabel" type="Label" parent="."]
offset_left = 1144.0
offset_top = 600.0
offset_right = 1248.0
offset_bottom = 688.0
theme_override_font_sizes/font_size = 64
text = "3"
horizontal_alignment = 2
vertical_alignment = 2

[node name="CurrentPlayerLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Player 1's turn"
horizontal_alignment = 1

[node name="WinOverlay" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinnerLabel" type="Label" parent="WinOverlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_right = 25.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="action_used" from="MiddleArea" to="." method="_on_action_used"]
[connection signal="action_used" from="PlayerArea" to="." method="_on_action_used"]
[connection signal="visibility_changed" from="PlayerArea" to="PlayerArea" method="_on_visibility_changed"]
[connection signal="action_used" from="PlayerArea2" to="." method="_on_action_used"]
[connection signal="visibility_changed" from="PlayerArea2" to="PlayerArea2" method="_on_visibility_changed"]
[connection signal="action_used" from="PlayerArea3" to="." method="_on_action_used"]
[connection signal="visibility_changed" from="PlayerArea3" to="PlayerArea3" method="_on_visibility_changed"]
[connection signal="action_used" from="PlayerArea4" to="." method="_on_action_used"]
[connection signal="visibility_changed" from="PlayerArea4" to="PlayerArea4" method="_on_visibility_changed"]
[connection signal="action_used" from="PlayerArea5" to="." method="_on_action_used"]
[connection signal="visibility_changed" from="PlayerArea5" to="PlayerArea5" method="_on_visibility_changed"]
[connection signal="action_used" from="PlayerArea6" to="." method="_on_action_used"]
[connection signal="visibility_changed" from="PlayerArea6" to="PlayerArea6" method="_on_visibility_changed"]
